# dream_engine

./: .gitignore  CMakeLists.txt  ClassDiagram.cd  README.md  blinnmaterial.cpp  blinnmaterial.h  boundingbox.cpp  boundingbox.h  ddir.cpp  ddir.h  dimaterial.h  diview.h  dmainmodel.cpp  dmainmodel.h  dmainview.cpp  dmainview.h  dmaterial.cpp  dmaterial.h  dmaterialmodel.cpp  dmaterialmodel.h  dmaterialview.cpp  dmaterialview.h  dmodel.cpp  dmodel.h  dopenglwidget.cpp  dopenglwidget.h  dplayercamera.cpp  dplayercamera.h  dream_engine.pro  dshader.cpp  dshader.h  dshadertoymodel.cpp  dshadertoymodel.h  dshadertoyview.cpp  dshadertoyview.h  dtexture.cpp  dtexture.h  dview.cpp  dview.h  main.cpp  (+25 more)
media/shaders/blinn_material/: blinn_material.fs.glsl  blinn_material.vs.glsl
media/shaders/bounding_box/: bounding_box.fs.glsl  bounding_box.vs.glsl
media/shaders/dview/: dview.vs.glsl
media/shaders/model_show/: model_show.fs.glsl
media/shaders/multi_texture/: multi_texture.fs.glsl  multi_texture.vs.glsl
media/shaders/object_instanced/: object_instanced.fs.glsl  object_instanced.vs.glsl
media/shaders/shadow/: shadow_depth.fs.glsl  shadowmap.fs.glsl  shadowmap.vs.glsl  shadowmap_advance.fs.glsl  shadowmap_advance.vs.glsl
media/shaders/simple_tess/: simple_tess.cont.glsl  simple_tess.eval.glsl  simple_tess.fs.glsl  simple_tess.vs.glsl
media/shaders/simple_triangle/: triangle.fs.glsl  triangle.vs.glsl
media/shaders/specular_material/: specular_material.fs.glsl  specular_material.vs.glsl
media/shaders/spot_light/: spot_light.fs.glsl  spot_light.vs.glsl
